--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,4 @@
+/*StylesWithCSS*/
 .StyledComponent {
     width: 70%;
     margin: 30px auto;
@@ -10,6 +11,7 @@
     padding: 20px;
 }
 
+/*PassCallbackasProps*/
 .MyApplication {
     width: 50%;
     border: 2px solid sienna;
